@startuml Domain Model - List Property Request
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

class "Agent" as Employee

class Person {
	email
	name
	passport
	tin
	phoneNumber
}

class Employee {
	role
}

class Advertisement {
    date
    commissionValue
}

class CommissionType <<enum>> {
    designation
}

class PropertyType <<enum>> {
    designation
}

class Property <<Interface>> {
    area
    distance
    photographs
}

class Location <<Interface>> {
    area
    distance
    photographs
    street
    zip
    state
    city
    district
}

class Land {
}

class Apartment {
    numberBedrooms
    numberBathrooms
    numberParking
    availableEquipment
}

class House {
    numberBedrooms
    numberBathrooms
    numberParking
    availableEquipment
    basement
    loft
    sunExposure
}

class BusinessType <<enum>> {
    description
}

class Request <<Interface>> {
	date
	property
	price
}

class RequestLease {
	price
	durationOfContract
}

class RequestSale {
}

Employee --|> Person 

Employee "1"  -- "*" Request : validates >

Person "1" -- "*" Request : makes >

Employee "1" -- "*" Advertisement : creates >
Advertisement "1" -- "1" Request : contains >
Advertisement "1" -- "1" CommissionType : has >

Request "1" -- "1" BusinessType : has >

Request "1" --> "1" Property : has >

Land "1" -- "1" PropertyType : has >
Apartment "1" -- "1" PropertyType : has >
House "1" -- "1" PropertyType : has >

Request <|.. RequestLease
Request <|.. RequestSale

Property <|.. Land
Property <|.. Apartment
Property <|.. House

Location <|.. Land
Location <|.. Apartment
Location <|.. House

@enduml
